food project cards layout issue

--- a/food_site/style.css
+++ b/food_site/style.css
@@ -504,3 +504,53 @@ html{
         height: 30rem;
     }
 }
+
+@media (max-width: 900px) {
+    .navbar-link {
+        margin: 2rem;
+    }
+
+    .navbar-link i{
+        font-size: 4rem;
+    }
+
+    .navbar-link span {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 700px) {
+    .section-heading {
+        font-size: 7rem;
+        margin: 0 10rem;
+    }
+
+    .section-1-icons i {
+        font-size: 20rem;
+    }
+
+    .menu {
+        left: 2rem;
+    }
+
+    .section-4 {
+        height: 40rem;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .section-4-text {
+        margin-bottom: 8rem;
+    }
+}
+
+@media (max-width: 550px) {
+    html {
+        font-size: 40%;
+    }
+
+    .navbar-link {
+        margin: 0 0.7rem;
+    }
+}
